--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 	</style>
 </head>
 <body>
-	<img src="header.jpg">
-	<img src="hero.jpg">
-	<img src="acustica.jpg">
+		<img src="nueva-version.jpg">
 </body>
 </html>
